Fix alignment of email input and get access button for perfect alignment

--- a/assets/popup.css
+++ b/assets/popup.css
@@ -12,9 +12,17 @@
   font-size: var(--t-b-3-size);
   display: flex;
   justify-content: space-between;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 
+
+.emailaddr {
+  margin: 0;
+  box-sizing: border-box;
+}
 
 input::placeholder {
   font-size:var(--t-b-3-size); 
